# half

./: CMakeLists.txt
cmake/: halfConfig.cmake.in
